[package]
name = "nquery"
version = "0.1.0"
authors = ["Aru Sahni <aru.sahni@sparkmeter.io>"]
edition = "2018"
description = "Query your Nomad clusters"
homepage = "https://github.io/sparkmeter/nquery"
repository = "https://github.com/sparkmeter/nquery"
readme = "README.md"
keywords = ["git", "gitlab", "github"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ureq = { version = "*", features = ["json"] }
env_logger = "0.7"
log = "0.4"
jsonpath_lib = "0.2.5"
