[package]
name = "nquery"
version = "0.3.0"
authors = ["Aru Sahni <aru.sahni@sparkmeter.io>"]
edition = "2018"
description = "Query your Nomad clusters"
homepage = "https://github.io/sparkmeter/nquery"
repository = "https://github.com/sparkmeter/nquery"
readme = "README.md"
keywords = ["nomad", "hashicorp"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "sparkmeter/nquery" }
is-it-maintained-open-issues = { repository = "sparkmeter/nquery" }
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0"
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ureq = { version = "1.5", features = ["json"] }
env_logger = "0.7"
log = "0.4"
jsonpath_lib = "0.2.5"
percent-encoding = "2.1"
color-backtrace = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
